--- a/code/main/main-app/src/main/resources/application.yml
+++ b/code/main/main-app/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+springdoc:
+  packages-to-scan: "be.yonicon.template"
+  swagger-ui.path: "/swagger-ui/index.html"
+
 be.yonicon.template:
   infra:
     security:
