--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,14 @@ buildscript {
 }
 
 plugins {
-    id "org.sonarqube" version "4.0.0.2929"
-    id "org.owasp.dependencycheck" version "8.1.0"
     id "jacoco"
+    id "org.sonarqube" version "4.0.0.2929"
+    id "org.owasp.dependencycheck" version "8.2.1"
+
+    id "org.springframework.boot" version "3.0.6" apply false
+    id "com.gorylenko.gradle-git-properties" version "2.4.1" apply false
+    id "com.github.johnrengelman.shadow" version "8.1.1" apply false
+    id "io.freefair.lombok" version "8.0.1" apply false
 }
 
 tasks.register('printVersion') {
@@ -80,13 +85,13 @@ subprojects {
 
     dependencyManagement {
         imports {
-            mavenBom 'org.springframework.boot:spring-boot-dependencies:3.0.2'
-            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.1"
+            mavenBom 'org.springframework.boot:spring-boot-dependencies:3.0.6'
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.2"
         }
         dependencies {
-            dependency 'io.micrometer:micrometer-tracing-bridge-otel:1.0.2'
-            dependency 'net.logstash.logback:logstash-logback-encoder:7.2'
-            dependency 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+            dependency 'io.micrometer:micrometer-tracing-bridge-otel:1.0.4'
+            dependency 'net.logstash.logback:logstash-logback-encoder:7.3'
+            dependency 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
         }
     }
 
