--- a/code/main/main-boot/build.gradle
+++ b/code/main/main-boot/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id "org.springframework.boot" version "3.0.2"
-    id "com.gorylenko.gradle-git-properties" version "2.4.1"
-    id 'java'
+    id "org.springframework.boot"
+    id "com.gorylenko.gradle-git-properties"
+    id "java"
 }
 
 jar {
